--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -10,7 +10,7 @@ sonar.sources=src/main/java
 sonar.java.binaries=.
 #sonar.language=java
 
-sonar.exclusions=src/main/java/com/config/JDBCConfiguration.java
+sonar.exclusions=src/main/java/com/config/JDBCConfiguration.java,src/main/java/com/dao/VilleDAOImpl.java
 
 # Encoding of the source code.
 #Default is default system encoding
